--- a/week3_solution/index.html
+++ b/week3_solution/index.html
@@ -23,7 +23,7 @@
               <span class="icon-bar"></span>
             </button>
   
-            <div id="my-menu" class="collapse navbar-collapse">
+            <div id="my-menu" class="collapse navbar-collapse text-center">
               <ul class="nav navbar-nav navbar-right visible-xs">
                 <li class="nav-item">
                   <a href="#"><span>Chicken</span></a>
